berusaha copy apache beam
